--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://tronikito.github.io/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://tronikito.github.io/thepenguinsnft/src/index.html">
